--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "teekback-uxui",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "UI library.",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/k5man/teekback-uxui/issues"
   },
-  "homepage": "https://github.com/k5man/teekback-uxui#readme"
+  "homepage": "https://github.com/k5man/teekback-uxui#readme",
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0"
+  }
 }
