--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "homepage": "https://github.com/k5man/teekback-uxui#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.0.0"
+    "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "lesshat": "^4.1.0"
   }
 }
