--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^0.11.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "less-plugin-lists": "^1.1.1",
     "node-sass": "^4.5.3",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
