--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "node ./documentation/build-script/index.js dev"
   },
   "repository": {
     "type": "git",
@@ -21,17 +22,48 @@
   },
   "homepage": "https://github.com/k5man/teekback-uxui#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-regenerator-runtime": "^6.5.0",
     "clean-webpack-plugin": "^0.1.16",
+    "command-line-args": "^4.0.7",
+    "convict": "^4.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.5",
+    "ejs-loader": "^0.3.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.0",
+    "inferno": "^3.8.1",
+    "inferno-compat": "^3.8.1",
+    "inferno-component": "^3.8.1",
+    "inferno-redux": "^3.8.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "less-plugin-lists": "^1.1.1",
     "node-sass": "^4.5.3",
+    "prop-types": "^15.5.10",
+    "redux": "^3.7.2",
     "style-loader": "^0.18.2",
+    "stylelint": "^8.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "lesshat": "^4.1.0"
