--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://ч"
+    "url": "git+https://"
   },
   "keywords": [
     "ui"
@@ -48,7 +48,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.4.0",
+    "image-webpack-loader": "3.3.0",
     "inferno": "^3.8.1",
     "inferno-compat": "^3.8.1",
     "inferno-component": "^3.8.1",
