--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
 		"DEV": false,
 		"PropTypes": false,
 		"isProduction": false,
-		"Teek": false
+		"Teek": false,
+		"$": false
 	},
 	"rules": {
 		"no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": true  }],
@@ -46,6 +47,7 @@
 		"react/jsx-indent-props": 0,
 		"react/forbid-prop-types": 0,
 		"react/jsx-first-prop-new-line": 0,
-		"no-case-declarations": 0
+		"no-case-declarations": 0,
+		"padded-blocks": 0
 	}
 }
