--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "teekback-uxui",
-  "version": "2.0.2",
+  "version": "2.0.1",
   "description": "UI library.",
   "main": "index.js",
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "dev": "node ./documentation/build-script/index.js dev",
-    "preview-build": "node ./documentation/build-script/index.js build",
-    "preview-analyze": "node ./documentation/build-script/index.js analyze"
+	"dev": "node ./documentation/build-script/index.js dev",
+	"preview-build": "node ./documentation/build-script/index.js build",
+	"preview-analyze": "node ./documentation/build-script/index.js analyze"
   },
   "repository": {
     "type": "git",
@@ -68,10 +68,6 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.2.1",
-    "lesshat": "^4.1.0",
-    "materialize": "^1.0.0",
-    "materialize-css": "^0.100.2"
+    "lesshat": "^4.1.0"
   }
 }
