--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
     "materialize": "^1.0.0",
-    "materialize-css": "^0.100.2"
+    "materialize-css": "^0.100.2",
+    "react-input-mask": "^1.0.7"
   }
 }
