--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
 		"react/jsx-indent-props": 0,
 		"react/forbid-prop-types": 0,
 		"react/jsx-first-prop-new-line": 0,
+		"jsx-a11y/label-has-for": 0,
 		"no-case-declarations": 0,
 		"padded-blocks": 0
 	}
