--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux": "^3.7.2",
     "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
+    "stylelint-config-standard": "^17.0.0",
     "stylelint-webpack-plugin": "^0.9.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
