--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
@@ -69,6 +70,7 @@
     "webpack-dev-server": "^2.9.2"
   },
   "dependencies": {
+    "babel-eslint": "^8.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
